# WyvernAdventure3Vst

./: .gitignore  CMakeLists.txt  PRESETS_PLAN.md  README.md
.github/workflows/: build.yml  release.yml
Source/: Arpeggiator.h  GBCChannel.h  GBCConstants.h  GBCEnvelope.h  NoiseChannel.cpp  NoiseChannel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  PulseChannel.cpp  PulseChannel.h  RetroLookAndFeel.cpp  RetroLookAndFeel.h  Theme.h  WaveChannel.cpp  WaveChannel.h  WaveEditor.cpp  WaveEditor.h  WaveformDisplay.cpp  WaveformDisplay.h
Tests/: CMakeLists.txt  MidiMappingTest.cpp  NoiseChannelTest.cpp  PulseChannelTest.cpp  WaveChannelTest.cpp
scripts/: install-vst.ps1  smoke-test.ps1
